patched to new rddj-template

--- a/analysis/main.Rmd
+++ b/analysis/main.Rmd
@@ -1,25 +1,35 @@
 ---
-subtitle: "Vorprozessierung und Analyse"
 title: "Export von Kriegsmaterial aus der Schweiz"
 author: "SRF Data, Timo Grossenbacher (timo.grossenbacher@srf.ch), Marie-Louise Timcke (marie.timcke@journocode.com)"
-date: "02/21/2016"
+date: "Februar 2017"
 output:
   html_document:
     code_folding: show
-    theme: simplex
-    toc: yes
-    comment: NA
     echo: TRUE
-    message: FALSE
     warning: FALSE
-    fig.width: 10
+    message: FALSE
+    theme: simplex
+    df_print: kable
+    fig_width: 10
+    toc: yes
+    toc_depth: 4
     toc_float: 
       collapsed: false
       smooth_scroll: false
+subtitle: Vorprozessierung und Analyse
 ---
 
 ```{r, echo=FALSE}
-project_name <- "2017-02-kriegsmaterial"
+# CONFIG
+user_name <- "srfdata" # github user name
+project_name <- "2017-02-kriegsmaterial" # adapt to new repo name
+package_date <- "2017-06-01" # date of the CRAN snapshot that
+# the checkpoint package uses
+R_version <- "3.3.3" # R-Version to use
+options(Ncpus = 4) # use 4 cores for parallelized installation of packages
+if (R_version != paste0(version$major, ".", version$minor)){
+  stop("ERROR: specified R version does not match currently used.")
+}
 ```
 
 ---
@@ -34,17 +44,21 @@ Die Vorprozessierung und Analyse wurde im Statistikprogramm R vorgenommen. Die E
 
 * `output/export.csv`: Vollständiger, aggregierter Datensatz, der aus den einzelnen Jahresstatistiken des SECO geschaffen wird. Dieser Datensatz wird im folgenden Kapitel beschrieben. 
 
-#### R-Script & Daten
+### R-Script & Daten
 
-Das zugrunde liegende Script sowie die prozessierten Daten können unter [diesem Link](http://srfdata.github.io/2017-02-kriegsmaterial/rscript.zip) heruntergeladen werden. Durch Ausführen von `preprocessing.Rmd` kann der hier beschriebene Prozess nachvollzogen und dieses Dokument generiert werden. Dabei werden Daten aus dem Ordner `input` eingelesen und Ergebnisse in den Ordner `output` geschrieben. 
+Die Vorprozessierung und Analyse wurde im Statistikprogramm R vorgenommen. Das zugrunde liegende Script sowie die prozessierten Daten können unter [diesem Link](https://srfdata.github.io/`r project_name`/rscript.zip) heruntergeladen werden. Durch Ausführen von `main.Rmd` kann der hier beschriebene Prozess nachvollzogen und der für den Artikel verwendete Datensatz generiert werden. Dabei werden Daten aus dem Ordner `input` eingelesen und Ergebnisse in den Ordner `output` geschrieben. 
 
-#### GitHub
+SRF Data verwendet das [rddj-template](https://github.com/grssnbchr/rddj-template) von Timo Grossenbacher als Grundlage für seine R-Scripts.  Entstehen bei der Ausführung dieses Scripts Probleme, kann es helfen, die Anleitung von [rddj-template](https://github.com/grssnbchr/rddj-template) zu studieren. 
 
-Der Code für die vorliegende Datenprozessierung ist auf  [http://github.com/srfdata/2017-02-kriegsmaterial](http://github.com/srfdata/2017-02-kriegsmaterial) zur freien Verwendung verfügbar. 
+Debug-Informationen: *This report was generated on `r Sys.time()`. R version: `r paste0(version$major, ".", version$minor)` on `r version$platform`. For this report, CRAN packages as of `r package_date` were used.*
 
-#### Lizenz
+### GitHub
 
-<a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons Lizenzvertrag" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Dataset" property="dct:title" rel="dct:type">2017-02-kriegsmaterial</span> von <a xmlns:cc="http://creativecommons.org/ns#" href="https://github.com/srfdata/2017-02-kriegsmaterial" property="cc:attributionName" rel="cc:attributionURL">SRF Data</a> ist lizenziert unter einer <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Namensnennung - Weitergabe unter gleichen Bedingungen 4.0 International Lizenz</a>.
+Der Code für die vorliegende Datenprozessierung ist auf [https://github.com/srfdata/`r project_name`](https://github.com/srfdata/`r project_name`) zur freien Verwendung verfügbar. 
+
+### Lizenz
+
+<a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons Lizenzvertrag" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Dataset" property="dct:title" rel="dct:type">`r project_name`</span> von <a xmlns:cc="http://creativecommons.org/ns#" href="https://github.com/srfdata/`r project_name`" property="cc:attributionName" rel="cc:attributionURL">SRF Data</a> ist lizenziert unter einer <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Namensnennung - Weitergabe unter gleichen Bedingungen 4.0 International Lizenz</a>.
 
 #### Weitere Projekte
 
@@ -113,17 +127,26 @@ detach_all_packages <- function() {
 
 detach_all_packages()
 
-rm(list = ls(all.names = TRUE))
-# nolint start
-# Hier Arbeitsverzeichnis anpassen!
-path_to_wd <- switch(EXPR = system2("whoami", stdout = TRUE),
-                     "johndoe" = "~",
-                     NULL)
-# nolint end
-if ( is.null(path_to_wd) ) {
+# this allows multiple persons to use the same RMarkdown
+# without adjusting the working directory by themselves all the time
+source("scripts/csf.R")
+path_to_wd <- csf() # if this - for some reason - does not work,
+# replace with a hardcoded path, like so: "~/projects/rddj-template/analysis/"
+if ( is.null(path_to_wd) | !dir.exists(path_to_wd)) {
   print("WARNING: No working directory specified for current user")
 } else {
   setwd(path_to_wd)
+}
+
+# suppress scientific notation
+options(scipen = 999)
+
+# unload global rstudioapi and knitr again to avoid conflicts with checkpoint
+# this is only necessary if executed within RStudio
+# outside of RStudio, namely in the knit.sh script, this causes RMarkdown
+# rendering to fail, thus should not be executed there
+if (Sys.getenv("RSTUDIO") == "1"){
+  detach_all_packages()
 }
 ```
 
@@ -139,24 +162,25 @@ library(readxl)
 library(stringr)
 library(scales)
 library(grid)
+library(rmarkdown)
 library(reshape)",
 file = "manifest.R")
-
-package_date <- "2017-06-01"
-
 ```
 
 ### Packages installieren
 
 ```{r install packages}
+# if checkpoint is not yet installed, install it (for people using this
+# system for the first time)
 if (!require(checkpoint)) {
   if (!require(devtools)) {
     install.packages("devtools", repos = "http://cran.us.r-project.org")
     require(devtools)
   }
-  devtools::install_github("checkpoint",
-                           username = "RevolutionAnalytics",
-                           ref = "v0.3.2",
+  devtools::install_github("RevolutionAnalytics/checkpoint",
+                           ref = "v0.3.2", # could be adapted later,
+                           # as of now (beginning of July 2017
+                           # this is the current release on CRAN)
                            repos = "http://cran.us.r-project.org")
   require(checkpoint)
 }
@@ -165,11 +189,13 @@ if (!dir.exists("~/.checkpoint")) {
   dir.create("~/.checkpoint")
 }
 # nolint end
+# install packages for the specified CRAN snapshot date
 checkpoint(snapshotDate = package_date,
            project = path_to_wd,
            verbose = T,
            scanForPackages = T,
-           use.knitr = F)
+           use.knitr = F,
+           R.version = R_version)
 rm(package_date)
 ```
 
@@ -189,8 +215,6 @@ sessionInfo()
 
 ```{r load data}
 # 2000 - 2016
-
-#setwd("/Users/MarieLou/SRF/1601-arms-exports/preprocessing")
 
 # Alle Exceltabellen liegen aufsteigend in einer Arbeitsmappe, so dass sheet1 = 2000, sheet2 = 2001 usw
 # lade alle sheets der Arbeitsmappe als data frames in eine Liste sheets
